docs(website): add i18n for french

--- a/documentation/blog/2022-001-20-first-website-draft/index.mdx
+++ b/documentation/blog/2022-001-20-first-website-draft/index.mdx
@@ -1,11 +1,15 @@
 ---
 slug: welcome
-title: Welcome
-authors: [slorber, yangshun]
-tags: [facebook, hello, docusaurus]
+title: Welcome!
+description: Welcome to the very first version of the Website!
+authors: [C0ZEN]
+tags: [stale, website, documentation, first draft]
+hide_table_of_contents: false
 ---
 
 [Docusaurus blogging features](https://docusaurus.io/docs/blog) are powered by the [blog plugin](https://docusaurus.io/docs/api/plugins/@docusaurus/plugin-content-blog).
+
+<!--truncate-->
 
 Simply add Markdown files (or folders) to the `blog` directory.
 
@@ -17,8 +21,6 @@ The blog post date can be extracted from filenames, such as:
 - `2019-05-30-welcome/index.md`
 
 A blog post folder can be convenient to co-locate blog post images:
-
-![Docusaurus Plushie](./docusaurus-plushie-banner.jpeg)
 
 The blog supports tags as well!
 
