--- a/documentation/docs/tutorial-basics/markdown-features.mdx
+++ b/documentation/docs/tutorial-basics/markdown-features.mdx
@@ -6,7 +6,7 @@ sidebar_position: 4
 
 Docusaurus supports **[Markdown](https://daringfireball.net/projects/markdown/syntax)** and a few **additional features**.
 
-## Front Matter
+## Front Matter {#front-matter}
 
 Markdown documents have metadata at the top called [Front Matter](https://jekyllrb.com/docs/front-matter/):
 
@@ -25,7 +25,7 @@ slug: /my-custom-url
 Markdown text with [links](./hello.md)
 ```
 
-## Links
+## Links {#links}
 
 Regular Markdown links are supported, using url paths or relative file paths.
 
@@ -39,7 +39,7 @@ Let's see how to [Create a page](./create-a-page.md).
 
 **Result:** Let's see how to [Create a page](./create-a-page.md).
 
-## Images
+## Images {#images}
 
 Regular Markdown images are supported.
 
@@ -51,7 +51,7 @@ Add an image at `static/img/docusaurus.png` and display it in Markdown:
 
 ![Docusaurus logo](/img/docusaurus.png)
 
-## Code Blocks
+## Code Blocks {#code-blocks}
 
 Markdown code blocks are supported with Syntax highlighting.
 
@@ -69,7 +69,7 @@ function HelloDocusaurus() {
 }
 ```
 
-## Admonitions
+## Admonitions {#admonitions}
 
 Docusaurus has a special syntax to create admonitions and callouts:
 
@@ -97,7 +97,7 @@ This action is dangerous
 
 :::
 
-## MDX and React Components
+## MDX and React Components {#mdx-and-react-components}
 
 [MDX](https://mdxjs.com/) can make your documentation more **interactive** and allows using any **React components inside Markdown**:
 
@@ -123,7 +123,7 @@ This is <Highlight color="#25c2a0">Docusaurus green</Highlight> !
 This is <Highlight color="#1877F2">Facebook blue</Highlight> !
 ```
 
-export const Highlight = ({children, color}) => (
+export const Highlight = ({ children, color }) => (
   <span
     style={{
       backgroundColor: color,
@@ -134,7 +134,8 @@ export const Highlight = ({children, color}) => (
     }}
     onClick={() => {
       alert(`You clicked the color ${color} with label ${children}`);
-    }}>
+    }}
+  >
     {children}
   </span>
 );
