--- a/documentation/i18n/fr/docusaurus-plugin-content-blog/authors.yml
+++ b/documentation/i18n/fr/docusaurus-plugin-content-blog/authors.yml
@@ -1,5 +1,5 @@
 C0ZEN:
   name: Geoffrey "C0ZEN" Testelin
-  title: Creator and maintainer of this GitHub stale action
+  title: Créateur et mainteneur de cette action GitHub Stale
   url: https://github.com/C0ZEN
   image_url: https://github.com/C0ZEN.png
