docs(blog): write the welcome article

--- a/documentation/blog/2022-001-20-first-website-draft/index.mdx
+++ b/documentation/blog/2022-001-20-first-website-draft/index.mdx
@@ -7,21 +7,17 @@ tags: [stale, website, documentation, first draft]
 hide_table_of_contents: false
 ---
 
-[Docusaurus blogging features](https://docusaurus.io/docs/blog) are powered by the [blog plugin](https://docusaurus.io/docs/api/plugins/@docusaurus/plugin-content-blog).
+Happy to announce that this is the very first version of this website!
 
 <!--truncate-->
 
-Simply add Markdown files (or folders) to the `blog` directory.
+## Why even bother?
 
-Regular blog authors can be added to `authors.yml`.
+We really think that handling a huge number of issues on a repository is time-consuming, a real grunt task in a way.  
+We hope that by adding this website, you will have access to even further help to let you customize your stale action at your convenience.  
+The configuration can be complex when you have strong requirements, but it's OK!
 
-The blog post date can be extracted from filenames, such as:
+## Share your work!
 
-- `2019-05-30-welcome.md`
-- `2019-05-30-welcome/index.md`
-
-A blog post folder can be convenient to co-locate blog post images:
-
-The blog supports tags as well!
-
-**And if you don't want a blog**: just delete this directory, and use `blog: false` in your Docusaurus config.
+By letting the community know your configuration, it can help to clarify what kind of scenarios to expect from this action.  
+Do not hesitate to [open a new blog article suggestion](https://github.com/Sonia-corporation/stale/issues/new/choose).
