--- a/documentation/i18n/fr/docusaurus-plugin-content-blog/2022-001-20-first-website-draft/index.mdx
+++ b/documentation/i18n/fr/docusaurus-plugin-content-blog/2022-001-20-first-website-draft/index.mdx
@@ -7,22 +7,17 @@ tags: [stale, site web, documentation, première version]
 hide_table_of_contents: false
 ---
 
-fr
-[Docusaurus blogging features](https://docusaurus.io/docs/blog) are powered by the [blog plugin](https://docusaurus.io/docs/api/plugins/@docusaurus/plugin-content-blog).
+Nous sommes heureux de vous annoncer que c'est la première version de ce site web !
 
 <!--truncate-->
 
-Simply add Markdown files (or folders) to the `blog` directory.
+## Pourquoi tant de peine ?
 
-Regular blog authors can be added to `authors.yml`.
+Nous pensons vraiment que géré un grand nombre de bugs dans un repository prend trop de temps et c'est vraiment un travail de peon.  
+Nous espérons qu'en créant ce site web, vous aurez accès à encore plus d'aide pour vous aider au mieux à configuration votre GitHub action stale comme vous le souhaitez.  
+La configuration peut parfois être complexe quand vous avez des besoins précis, mais c'est tout à fait OK !
 
-The blog post date can be extracted from filenames, such as:
+## Partage ton travail !
 
-- `2019-05-30-welcome.md`
-- `2019-05-30-welcome/index.md`
-
-A blog post folder can be convenient to co-locate blog post images:
-
-The blog supports tags as well!
-
-**And if you don't want a blog**: just delete this directory, and use `blog: false` in your Docusaurus config.
+En partageant avec la communauté votre configuration, vous pouvez aider d'autres personnes à concevoir des scénarios avec l'aide de cette action.  
+N'hésitez pas à [ouvrir un ticket](https://github.com/Sonia-corporation/stale/issues/new/choose) pour partager un nouvel article sur ce blog.
