docs(website): remove useless pages
Add the introduction

--- a/documentation/docs/02-issues/01-all-options.mdx
+++ b/documentation/docs/02-issues/01-all-options.mdx
@@ -1,5 +1,9 @@
 ---
-sidebar_position: 2
+id: all-issues-options
+title: All issues options
+tags:
+  - Issues
+  - Options
 ---
 
 # Translate your site
@@ -26,7 +30,7 @@ Copy the `docs/intro.md` file to the `i18n/fr` folder:
 ```bash
 mkdir -p i18n/fr/docusaurus-plugin-content-docs/current/
 
-cp docs/intro.md i18n/fr/docusaurus-plugin-content-docs/current/intro.md
+cp docs/01-introduction.mdx i18n/fr/docusaurus-plugin-content-docs/current/01-introduction.mdx
 ```
 
 Translate `i18n/fr/docusaurus-plugin-content-docs/current/intro.md` in French.
