--- a/documentation/blog/2022-001-20-first-website-draft/index.mdx
+++ b/documentation/blog/2022-001-20-first-website-draft/index.mdx
@@ -11,13 +11,13 @@ Happy to announce that this is the very first version of this website!
 
 <!--truncate-->
 
-## Why even bother?
+## Why even bother? {#why-even-bother}
 
 We really think that handling a huge number of issues on a repository is time-consuming, a real grunt task in a way.  
 We hope that by adding this website, you will have access to even further help to let you customize your stale action at your convenience.  
 The configuration can be complex when you have strong requirements, but it's OK!
 
-## Share your work!
+## Share your work! {#share-your-work}
 
 By letting the community know your configuration, it can help to clarify what kind of scenarios to expect from this action.  
 Do not hesitate to [open a new blog article suggestion](https://github.com/Sonia-corporation/stale/issues/new/choose).
