docs(website): add more pages to describe the options

--- a/documentation/docs/02-getting-started/01-workflow-creation.mdx
+++ b/documentation/docs/02-getting-started/01-workflow-creation.mdx
@@ -47,7 +47,7 @@ Make sure to acknowledge the comment regarding the `latest` tag, this is for our
 
 :::
 
-## Configure how to trigger your workflow
+## Configure how to trigger your workflow {#configure-how-to-trigger-your-workflow}
 
 From the [previous step configuration](#create-the-default-stale-action), your workflow will work but will never be triggered.  
 You must define how/when you wish to run the stale action.
