--- a/documentation/i18n/fr/docusaurus-theme-classic/navbar.json
+++ b/documentation/i18n/fr/docusaurus-theme-classic/navbar.json
@@ -3,10 +3,6 @@
     "message": "GitHub stale action",
     "description": "The title in the navbar"
   },
-  "item.label.Tutorial": {
-    "message": "Tutorial",
-    "description": "Navbar item with label Tutorial"
-  },
   "item.label.Blog": {
     "message": "Blog",
     "description": "Navbar item with label Blog"
@@ -14,5 +10,9 @@
   "item.label.GitHub": {
     "message": "GitHub",
     "description": "Navbar item with label GitHub"
+  },
+  "item.label.Documentation": {
+    "message": "Documentation",
+    "description": "Navbar item with label Documentation"
   }
 }
