--- a/documentation/docs/02-getting-started/02-workflow-testing.mdx
+++ b/documentation/docs/02-getting-started/02-workflow-testing.mdx
@@ -6,14 +6,14 @@ tags:
   - Workflow testing
 ---
 
-## Test the workflow
+## Test the workflow {#test-the-workflow}
 
 At this point, you shall have a working stale action.  
 Before going further into the customization, you may want to try it first.
 
 :::tip
 
-Use the `dry-run` mode to avoid altering your repository yet.
+Use the [dry-run](../dry-run-option) mode to avoid altering your repository yet.
 
 :::
 
@@ -29,14 +29,14 @@ with:
 :::tip
 
 You can now check the logs, and especially the statistics at the end.  
-You will have a better idea over what to expect when a real run without the `dry-run` mode occur.
+You will have a better idea over what to expect when a real run without the [dry-run](../dry-run-option) mode occur.
 
 :::
 
-## Customize the behaviour
+## Customize the behaviour {#customize-the-behaviour}
 
 If the action was successful, you may wish now to configure it at your convenience.  
-Follow the next page to know how.
+Follow the [next page](../all-options) to have access to all the options.
 
 :::info
 
