--- a/documentation/i18n/fr/docusaurus-theme-classic/footer.json
+++ b/documentation/i18n/fr/docusaurus-theme-classic/footer.json
@@ -11,10 +11,6 @@
     "message": "More",
     "description": "The title of the footer links column with title=More in the footer"
   },
-  "link.item.label.Tutorial": {
-    "message": "Tutorial",
-    "description": "The label of footer link with label=Tutorial linking to /docs/intro"
-  },
   "link.item.label.New issue": {
     "message": "New issue",
     "description": "The label of footer link with label=New issue linking to https://github.com/Sonia-corporation/stale/issues/new/choose"
@@ -34,5 +30,17 @@
   "copyright": {
     "message": "Copyright © 2022 Stale, Sonia Corporation. Built with Docusaurus.",
     "description": "The footer copyright"
+  },
+  "link.item.label.Intro": {
+    "message": "Intro",
+    "description": "The label of footer link with label=Intro linking to /docs/introduction"
+  },
+  "link.item.label.Config": {
+    "message": "Config",
+    "description": "The label of footer link with label=Config linking to /docs/configuration"
+  },
+  "link.item.label.Examples": {
+    "message": "Exemples",
+    "description": "The label of footer link with label=Examples linking to /docs/examples"
   }
 }
