docs(website): add example page

--- a/documentation/i18n/fr/docusaurus-plugin-content-docs/current.json
+++ b/documentation/i18n/fr/docusaurus-plugin-content-docs/current.json
@@ -14,5 +14,9 @@
   "sidebar.tutorialSidebar.category.Pull requests": {
     "message": "Pull requests",
     "description": "The label for category Pull requests in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.Examples": {
+    "message": "Exemples",
+    "description": "The label for category Examples in sidebar tutorialSidebar"
   }
 }
