docs(website): add explicit docs for every issue inputs

--- a/documentation/docs/06-issues/01-all-options.mdx
+++ b/documentation/docs/06-issues/01-all-options.mdx
@@ -8,19 +8,19 @@ tags:
 
 The list of all issues the options.
 
-| Input                             | Description                                                                                                                                     | Default |
-| --------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
-| issue-stale-label                 | The label that will be added to the issue when it is stale.                                                                                     | `stale` |
-| issue-ignore-all-labels           | Allow to ignore the processing of issues that contains any labels.                                                                              | `false` |
-| issue-ignore-any-labels           | Allow to ignore the processing of issues that contains one of those labels (multiline).                                                         |         |
-| issue-ignore-all-assignees        | Allow to ignore the processing of issues that contains any assignees.                                                                           | `false` |
-| issue-ignore-any-assignees        | Allow to ignore the processing of issues that contains one of those assignees (multiline).                                                      |         |
-| issue-ignore-all-project-cards    | Allow to ignore the processing of issues that contains any project cards.                                                                       | `false` |
-| issue-ignore-before-creation-date | Allow to ignore the processing of issues that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)). |         |
-| issue-days-before-stale           | The number of days until the issue is considered as stale.                                                                                      | `30`    |
-| issue-stale-comment               | The comment that will be sent once the issue is stale (keep empty to not send a comment).                                                       |         |
-| issue-days-before-close           | The number of days until a stale issue is considered as closed.                                                                                 | `10`    |
-| issue-close-comment               | The comment that will be sent once the issue is close (keep empty to not send a comment).                                                       |         |
-| issue-add-labels-after-stale      | A list of labels added when the processing stale the issue (multiline).                                                                         |         |
-| issue-add-labels-after-close      | A list of labels added when the processing close the issue (multiline).                                                                         |         |
-| issue-processing                  | Allow to process the issues.                                                                                                                    | `true`  |
+| Input                                                                         | Description                                                                                                                                     | Default |
+| ----------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
+| [issue-stale-label](issue-stale-label-option)                                 | The label that will be added to the issue when it is stale.                                                                                     | `stale` |
+| [issue-ignore-all-labels](issue-ignore-all-labels-option)                     | Allow to ignore the processing of issues that contains any labels.                                                                              | `false` |
+| [issue-ignore-any-labels](issue-ignore-any-labels-option)                     | Allow to ignore the processing of issues that contains one of those labels (multiline).                                                         |         |
+| [issue-ignore-all-assignees](issue-ignore-all-assignees-option)               | Allow to ignore the processing of issues that contains any assignees.                                                                           | `false` |
+| [issue-ignore-any-assignees](issue-ignore-any-assignees-option)               | Allow to ignore the processing of issues that contains one of those assignees (multiline).                                                      |         |
+| [issue-ignore-all-project-cards](issue-ignore-all-project-cards-option)       | Allow to ignore the processing of issues that contains any project cards.                                                                       | `false` |
+| [issue-ignore-before-creation-date](issue-ignore-before-creation-date-option) | Allow to ignore the processing of issues that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)). |         |
+| [issue-days-before-stale](issue-days-before-stale-option)                     | The number of days until the issue is considered as stale.                                                                                      | `30`    |
+| [issue-stale-comment](issue-stale-comment-option)                             | The comment that will be sent once the issue is stale (keep empty to not send a comment).                                                       |         |
+| [issue-days-before-close](issue-days-before-close-option)                     | The number of days until a stale issue is considered as closed.                                                                                 | `10`    |
+| [issue-close-comment](issue-close-comment-option)                             | The comment that will be sent once the issue is close (keep empty to not send a comment).                                                       |         |
+| [issue-add-labels-after-stale](issue-add-labels-after-stale-option)           | A list of labels added when the processing stale the issue (multiline).                                                                         |         |
+| [issue-add-labels-after-close](issue-add-labels-after-close-option)           | A list of labels added when the processing close the issue (multiline).                                                                         |         |
+| [issue-processing](issue-processing-option)                                   | Allow to process the issues.                                                                                                                    | `true`  |
