refactor(labels): use emojis in the labels
Closes #332

--- a/documentation/docs/08-examples/01-issues.mdx
+++ b/documentation/docs/08-examples/01-issues.mdx
@@ -20,7 +20,7 @@ uses: sonia-corporation/stale@latest
 with:
   issue-stale-label: inactive
   issue-ignore-any-labels: |
-    frozen
+    frozen :ice_cube:
     need help
     bug-confirmed
   issue-ignore-all-assignees: true
