docs(website): add a new page to explain how the statistics can be helpful
Closes #331

--- a/documentation/docs/02-getting-started/02-workflow-testing.mdx
+++ b/documentation/docs/02-getting-started/02-workflow-testing.mdx
@@ -28,7 +28,7 @@ with:
 
 :::tip
 
-You can now check the logs, and especially the statistics at the end.  
+You can now check the logs, and especially the [statistics](../statistics) at the end.  
 You will have a better idea over what to expect when a real run without the [dry-run](../dry-run-option) mode occur.
 
 :::
