--- a/documentation/docs/05-dry-run-option.mdx
+++ b/documentation/docs/05-dry-run-option.mdx
@@ -22,7 +22,7 @@ This is a good way to experiment with your configuration so that you won't have 
 :::tip
 
 The logs will give you a lot of information to know what is happening during the processing.  
-Check also the statistics at the end of the logs to have an overhaul idea of what happened.
+Check also the [statistics](statistics) at the end of the logs to have an overhaul idea of what happened.
 
 :::
 
