Revert "chore(master): merge develop into master (#364)"
This reverts commit b861c610dd27df4546c3c197fd7ed19df382e4a1.

--- a/documentation/docs/01-introduction.mdx
+++ b/documentation/docs/01-introduction.mdx
@@ -46,6 +46,6 @@ You can also directly refer to the [pull requests documentation](pull-requests/a
 ## Original idea {#original-idea}
 
 This is not the first and maybe not the last project that aim to solve this stale issue on GitHub.  
-This action was created to simply replace—at least in terms of features—the [action created by GitHub](https://github.com/actions/stale) to stale.  
+This action was created to simply replace - at least in terms of features- the [action created by GitHub](https://github.com/actions/stale) to stale.  
 [Geoffrey 'C0ZEN' Testelin](https://github.com/C0ZEN) was originally one of the main contributor of this action, but due to different visions, he decided to go on his own to create this action instead.  
 Our goal is to provide as many features as people need to make sure they can reduce the complexity of managing those stale items impediments.
